Replace entries with Integer.valueOf and Long.valueOf