@@ -33,7 +33,7 @@ public class Socks5Proxy extends Proxy implements Cloneable{
      @throws UnknownHostException If proxyHost can't be resolved.
    */
    public Socks5Proxy(String proxyHost,int proxyPort)
-          throws UnknownHostException{ 
+          throws UnknownHostException{
       super(proxyHost,proxyPort);
       version = 5;
       setAuthenticationMethod(0,new AuthenticationNone());
@@ -91,20 +91,20 @@ public class Socks5Proxy extends Proxy implements Cloneable{
           return false;
       if(method == null){
         //Want to remove a particular method
-	return (authMethods.remove(new Integer(methodId)) != null);
+	return (authMethods.remove(Integer.valueOf(methodId)) != null);
       }else{//Add the method, or rewrite old one
-	authMethods.put(new Integer(methodId),method);
+	authMethods.put(Integer.valueOf(methodId),method);
       }
       return true;
    }
-   
+
    /**
     Get authentication method, which corresponds to given method id
     @param methodId Authentication method id.
     @return Implementation for given method or null, if one was not set.
    */
    public Authentication getAuthenticationMethod(int methodId){
-      Object method = authMethods.get(new Integer(methodId));
+      Object method = authMethods.get(Integer.valueOf(methodId));
       if(method == null) return null;
       return (Authentication)method;
    }
@@ -112,7 +112,8 @@ public class Socks5Proxy extends Proxy implements Cloneable{
    /**
     Creates a clone of this Proxy.
    */
-   @SuppressWarnings("unchecked")
+   @Override
+@SuppressWarnings("unchecked")
 public Object clone(){
       Socks5Proxy newProxy = new Socks5Proxy(proxyIP,proxyPort);
       newProxy.authMethods = (Hashtable<Integer, Authentication>) this.authMethods.clone();
@@ -128,7 +129,8 @@ public Object clone(){
 //Protected Methods
 //=================
 
-   protected Proxy copy(){
+   @Override
+protected Proxy copy(){
        Socks5Proxy copy = new Socks5Proxy(proxyIP,proxyPort);
        copy.authMethods = this.authMethods; //same Hash, no copy
        copy.chainProxy = this.chainProxy;
@@ -139,7 +141,8 @@ public Object clone(){
     *
     *
     */
-   protected void startSession()throws SocksException{
+   @Override
+protected void startSession()throws SocksException{
       super.startSession();
       Authentication auth;
       Socket ps = proxySocket; //The name is too long
@@ -150,12 +153,12 @@ public Object clone(){
 
          byte[] buf = new byte[2+nMethods]; //2 is for VER,NMETHODS
          buf[0] = (byte) version;
-         buf[1] = nMethods;                 //Number of methods 
+         buf[1] = nMethods;                 //Number of methods
          int i=2;
 
          Enumeration<Integer> ids = authMethods.keys();
          while(ids.hasMoreElements())
-            buf[i++] = (byte)((Integer)ids.nextElement()).intValue();
+            buf[i++] = (byte)ids.nextElement().intValue();
 
          out.write(buf);
          out.flush();
@@ -197,7 +200,7 @@ public Object clone(){
 
          in = (InputStream) in_out[0];
          out = (OutputStream) in_out[1];
-         if(in_out.length > 2) 
+         if(in_out.length > 2)
             udp_encapsulation = (UDPEncapsulation) in_out[2];
 
       }catch(SocksException s_ex){
@@ -212,17 +215,20 @@ public Object clone(){
       }
    }
 
-   protected ProxyMessage formMessage(int cmd,InetAddress ip,int port){
+   @Override
+protected ProxyMessage formMessage(int cmd,InetAddress ip,int port){
        return new Socks5Message(cmd,ip,port);
    }
-   protected ProxyMessage formMessage(int cmd,String host,int port)
+   @Override
+protected ProxyMessage formMessage(int cmd,String host,int port)
              throws UnknownHostException{
        if(resolveAddrLocally)
           return formMessage(cmd,InetAddress.getByName(host),port);
        else
           return new Socks5Message(cmd,host,port);
    }
-   protected ProxyMessage formMessage(InputStream in)
+   @Override
+protected ProxyMessage formMessage(InputStream in)
              throws SocksException,
                     IOException{
        return new Socks5Message(in);
